--- a/_data/people.yml
+++ b/_data/people.yml
@@ -1,3 +1,30 @@
+rcanzanese:
+    display_name: "Ray Canzanese"
+    bio: 2015
+    webpage: https://www.canzanese.com
+    github: rcanzanese
+    image: /img/people/rcanzanese.jpg
+    role: phd
+sacharya:
+    display_name: "Sandeep Acharya"
+    bio: 2014
+    role: phd
+
+#	Sayandeep Acharya, 2014 	Ram Achuthanandam, 2005 	Gustave Anderson, 2011 	Li Bai, 2001 	Bradford Boyle, 2015 	Donald Bucci, 2015 	Raymond Canzanese, 2015 	Wei Chang, 1992 	Wendi Chen, 2010 	Robert Conn, 1995 	David Dorsey, 2014 	Gabriel Fielding, 1999 	Lex Fridman, 2014 	Amit Goffer, 1990 	Scott Haney, 2011 	Brian Hipszer, 2008 	Marco Janko 	Thierry Jurand, 1991 	Andres Lebaudy, 1996 	Erwei Lin, 2005 	Lit-Hsin Loo, 2004 	Ryan Measel, 2015 	Ari Naim, 1992 	Joseph Prosser, 1996 	Arjun Rajasekar 	George Sworo, 2015 	Leonardo Urbano, 2014 	Mianyu Wang, 2008 	Jeffrey Wildman, 2015 	Feiyu Xiong, 2015 	Yingqin Yuan, 2004 	Qiang Zhu, 1993 	Xiaoxun Zhu, 1997
+#M.S.
+
+
+#	Portia (Morse) O'Callaghan, 1999 	Agnes Arreola, 1993 	William Bassill, 1997 	Chris Berry, 2014 	Jeffrey Block, 1991 	Gary Cane, 1995 	Fieldi Chan, 1997 	Krishna Chintalapudi, 1999 	Valentin Christea, 1996 	Amit Cohen, 1994 	Errol D'Souza, 1991 	Anup Dandekar, 2008 	Nishant Dhawan, 2006 	Olga Donskoy, 1994 	Javier Elenes, 1996 	Christopher Gaughan, 2004 	Camillo Gentile, 1996 	Sankar Ghosh, 1998 	Cole Gindhart, 2015 	Andrzej Gorski, 2004 	Kishore Gummadidala, 1999 	Aron Harf, 2005 	Chip Heyser, 2000 	Harish Kasiviswanathan, 2003 	Lee Kim, 1987 	Ronald Kralik, 2000 	Christopher Lester, 2012 	Chhay Lim, 1988 	Fong Luei, 2000 	Patrick Marron, 2014 	Gregory Martis, 1991 	Saverio Mercurio, 1992 	Vaishali Parikh, 2014 	Dhruv Ramesh, 2003 	Brian Reardon, 2000 	Kenneth Ridler, 1995 	Ze'ev Rivlin, 1993 	David Tack, 2000 	Dileep Thazhmon, 2005 	Sudeep Thazhmon, 2002 	Joseph Westein, 1994 	Jeffrey Wilcox, 1988 	Edward Woertz, 2005 	Lon Wong, 1989 	Yifei Xu, 2015 	Daniel Zalkind, 2014
+
+
+
+
+
+
+
+
+
+
 
 prof-a:
     display_name: "Prof A"
