--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name: Awesome Research Group
-url: http://awesome.example.edu
+name: Data Fusion Lab
+url: https://datafusionlab.org
 
 exclude: [bibble, README.md, Makefile, screenshot.png]
 
@@ -27,6 +27,8 @@ roles:
     name: Collaborators
   - key: alum
     name: Alumni
+  - key: phd
+    name: Ph.D.
 
 # Number of news stories on the front page.
 front_page_news: 8
@@ -45,9 +47,7 @@ navigation:
     link: /
   - title: People
     link: /#people
-  - title: Research
-    link: /research.html
-  - title: Publications
-    link: /publications.html
   - title: Code
     link: /code.html
+  - title: Publications
+    link: /publications.html
